planner (수정 / 삭제)
